[gd_scene load_steps=5 format=3 uid="uid://d2363an7kjrm7"]

[ext_resource type="Script" uid="uid://dauoivq0cepr6" path="res://scripts/main_game_controller.gd" id="1_a2b3c"]
[ext_resource type="Script" uid="uid://cijln7d7a2ffg" path="res://scripts/game_loop_manager.gd" id="2_xvr8p"]
[ext_resource type="PackedScene" uid="uid://bfahu2xv271kl" path="res://scenes/farm/farm_hud.tscn" id="3_yvr8p"]
[ext_resource type="PackedScene" uid="uid://u52mq103mb5w" path="res://scenes/combat/enemies/basic_goblin.tscn" id="4_0rdsr"]

[node name="MainGame" type="Node2D"]
script = ExtResource("1_a2b3c")

[node name="GameLoopManager" type="Node" parent="."]
script = ExtResource("2_xvr8p")

[node name="UI" type="CanvasLayer" parent="."]

[node name="StatsDisplay" parent="UI" instance=ExtResource("3_yvr8p")]
visible = false

[node name="PhaseTransition" parent="UI" instance=ExtResource("4_0rdsr")]
visible = false

[node name="PauseButton" type="Button" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
grow_horizontal = 0
text = "Pause"

[connection signal="phase_changed" from="GameLoopManager" to="." method="_on_game_loop_manager_phase_changed"]
[connection signal="pressed" from="UI/PauseButton" to="." method="_on_pause_button_pressed"]
